# nahfpa

./: .gitignore  CMakeLists.txt  HELP.md  README.md  index-1.html  log.txt  main.c  sloccer.bat
_templates/class/new/: code.ejs.t  header.ejs.t
_templates/generator/help/: index.ejs.t
data_structures/: DString.c  DString.h  List.c  List.h  common.h
expression_parser/: ExpNode.c  ExpNode.h  ExpParser.c  ExpParser.h
expression_tokenizer/: ExpTokenizer.c  ExpTokenizer.h
half_report/: .gitignore  half_report.tex
prog_docs/: prog_docs.tex  prog_docs.toc
spec/: spec.tex  spec.toc
spec/sections/: cli.tex  leironyelv.tex
src/: debugmalloc.h  main.c
src/data_structures/: DString.c  DString.h  List.c  List.h
src/dbgalloc/: debugmalloc.h  m.h
src/expression_parser/: ExpNode.c  ExpNode.h  ExpParser.c  ExpParser.h  TokenSlice.c  TokenSlice.h
src/expression_tokenizer/: ExpTokenizer.c  ExpTokenizer.h
src/logger/: logger.c  logger.h
src/nahfpa_cli/: NahfpaCli.c  NahfpaCli.h
src/svg_factory/: AmfTextWidth.c  AmfTextWidth.h  BoxModelBuilder.c  BoxModelBuilder.h  BoxNode.c  BoxNode.h  SvgFactory.c  SvgFactory.h
src/svg_file/: SvgFile.c  SvgFile.h
src/utils/: amf_text_width.c  amf_text_width.h  brackets.c  brackets.h  cassert.c  cassert.h  geomerty.c  geomerty.h  help_txt.c  help_txt.h  rendering_constants.c  rendering_constants.h  symbols_helper.c  symbols_helper.h  test_script.c  test_script.h
test/: .env  .gitignore  index.js  package-lock.json  package.json  stats.txt  test.html  test_template.hbs  tests.js
user_docs/: user_docs.tex  user_docs.toc
user_docs/sections/: cli.tex  leironyelv.tex
